--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rolodex-monsters",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://omerohana.github.io/Monsters_Rolodex/",
+  "homepage": "https://omerohana.github.io/MonstersRolodex",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
